fix(modalcontent): fix text align

--- a/src/components/ModalContent/ModalContent.scss
+++ b/src/components/ModalContent/ModalContent.scss
@@ -10,6 +10,7 @@
 	&__text {
 		font-size: 23px;
 		font-weight: 500;
+		text-align: center;
 	}
 	&__additional {
 		display: flex;
